Update template to include logo

--- a/_extensions/tum/template.tex
+++ b/_extensions/tum/template.tex
@@ -93,8 +93,8 @@ $endif$
   
     \centering
   
-    \IfFileExists{logos/tum.pdf}{%
-      \includegraphics[height=20mm]{logos/tum.pdf}
+    \IfFileExists{logo.pdf}{%
+      \includegraphics[height=20mm]{logo.pdf}
     }{%
       \vspace*{20mm}
     }
@@ -126,8 +126,8 @@ $endif$
   \begin{titlepage}
     \centering
   
-    \IfFileExists{logos/tum.pdf}{%
-      \includegraphics[height=20mm]{logos/tum.pdf}
+    \IfFileExists{logo.pdf}{%
+      \includegraphics[height=20mm]{logo.pdf}
     }{%
       \vspace*{20mm}
     }
